<resources>
    <string name="application_name" translatable="false">Amahi</string>
    <string name="title_apps">Apps</string>
    <string name="title_settings">Settings</string>
    <string name="title_shares">Shares</string>
    <string name="title_no_server">No Server</string>
    <string name="title_upload_list">Upload</string>
    <string name="title_offline_files">Offline Files</string>
    <string name="title_recent_files">Recent Files</string>
    <string name="button_search_application">Search Google Play</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_retry">Retry</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="menu_back">Back</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_navigation_close">Close navigation</string>
    <string name="menu_navigation_open">Open navigation</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_save">Save to device</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_offline">Offline</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_search">Search</string>
    <string name="menu_open">OPEN</string>
    <string name="menu_audio_files">Files</string>
    <string name="menu_video_subtitle">Subtitles</string>
    <string name="menu_filter">Filter</string>
    <string name="media_route_menu_item" translatable="false">cast</string>
    <string name="message_empty_apps">No Apps</string>
    <string name="message_empty_files">No Files</string>
    <string name="message_empty_shares">No Shares</string>
    <string name="message_empty_recent_files">No Recent Files</string>
    <string name="message_error_account_exists">Account already exists.</string>
    <string name="message_error_search_application">We haven’t found any supported apps for this file.</string>
    <string name="forgot_password"><a href="https://www.amahi.org/forgot">Forgot your password?</a></string>
    <string name="message_error_authentication">The username or password are not correct. Please try again.</string>
    <string name="message_error_authentication_connection">Connection error. Check your settings and try again.</string>
    <string name="message_error_authentication_field_empty">Username or password field cannot be left empty.</string>
    <string name="message_error_connection">Connection Error</string>
    <string name="message_tap_to_retry">Tap to retry</string>
    <string name="message_error_video">Error playing the video</string>
    <string name="message_error_amahi_anywhere_app">The Amahi Anywhere app in your server is not reachable. Please ensure that Amahi Anywhere app is installed, running and reachable in your network.</string>
    <string name="message_resume_last_position">Do you wish to resume from where you stopped?</string>
    <string name="message_notice_create_some">Create some and try again</string>
    <string name="message_notice_visit_some">Visit some and try again</string>
    <string name="message_progress_file_downloading">Downloading file …</string>
    <string name="message_progress_file_preparing">Preparing file …</string>
    <string name="message_no_files">Files downloaded appear here</string>
    <string name="message_create_and_try_again">Find files to download</string>
    <string name="message_connection_error">Connection Error</string>
    <string name="message_connect_and_try_again">Please connect to the internet and try again.</string>
    <string name="message_connect_to_server_and_try_again">Please connect to your server and try again.</string>
    <string name="message_delete_file_title">Confirm File Delete?</string>
    <string name="message_delete_file_body">This action cannot be undone.</string>
    <string name="message_delete_progress">Deleting</string>
    <string name="message_delete_file_error">Some error occurred while deleting file.</string>
    <string name="message_file_upload">Select Files to Upload</string>
    <string name="message_file_upload_title">Uploading your file …</string>
    <string name="message_file_upload_complete">File uploaded successfully</string>
    <string name="message_file_upload_error">There was some error in uploading your file.</string>
    <string name="message_duplicate_file_upload">Overwrite existing file?</string>
    <string name="message_duplicate_file_upload_body">The file %1$s already exists.\nAre you sure you want to replace the existing file?</string>
    <string name="notification_upload_title">Uploading new image</string>
    <string name="message_upload_success">Upload completed</string>
    <string name="message_upload_error">Upload failed</string>
    <string name="message_file_download_complete">File downloaded successfully</string>
    <string name="message_offline_file_deleted">Offline file removed successfully</string>
    <string name="notification_download_offline_title">Making available offline</string>
    <string name="notification_offline_download_complete">File available offline</string>
    <string name="notification_offline_download_paused">Waiting for internet</string>
    <string name="notification_offline_download_error">Error while making file available offline</string>
    <string name="share_subject">Check out my Amahi home server!</string>
    <string name="share_message">I use the Amahi Home Server for storing, backing up and streaming all my files.\n\nCheck it out!\n\n<a href="https://www.amahi.org/">https://www.amahi.org/</a></string>
    <string name="title_version_settings">Amahi for Android</string>
    <string name="message_no_search_result">No search results found</string>
    <string name="application_not_found">No handler application found</string>
    <string name="message_logout">Logged out successfully</string>
    <string name="share_screen_title">Share Using</string>
    <string name="share_permission">Storage permission is required to download the file.</string>
    <string name="share_permission_denied">You have denied permissions for storage. Enable to continue.</string>
    <string name="file_upload_permission">File read permission is required to access files on your device.</string>
    <string name="file_upload_permission_denied">You have denied permissions for reading files. Enable to continue.</string>
    <string name="camera_permission">Camera access is required to capture photos and videos.</string>
    <string name="label_previous">Previous</string>
    <string name="label_next">Next</string>
    <string name="label_play">Play</string>
    <string name="label_pause">Pause</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="upload_camera">Use Camera</string>
    <string name="upload_file">Upload File</string>
    <string name="app_title" translatable="false">Amahi TV</string>
    <string name="exit_title">Exit</string>
    <string name="exit_message">Are you sure you want to quit?</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="sign_out_message">Are you sure you want to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="intro_tv_1">Welcome to Amahi for Android TV</string>
    <string name="intro_phone_1">Welcome to Amahi for Android</string>
    <string name="intro_desc_phone_1">An Android app that lets you access the files in your Amahi Home Server.</string>
    <string name="intro_title_2">Access your HDA</string>
    <string name="intro_desc_2">Amahi lets you play your videos, view your photos, listen to your music and more!</string>
    <string name="intro_title_3">Browse your Photos</string>
    <string name="intro_desc_tv_3">Browse your photo library in your TV, fast and at amazing resolution.</string>
    <string name="intro_desc_phone_3">Browse your photo library easily, upload photos directly from your phone.</string>
    <string name="intro_title_4">Play your Music</string>
    <string name="intro_desc_tv_4">Listen to your music library in your TV, perfect for parties, or for relaxing with your favorite tunes.</string>
    <string name="intro_desc_phone_4">Listen to your music library, at home or on the road.</string>
    <string name="intro_title_5">Play your Movies and Video Library</string>
    <string name="intro_desc_tv_5">Watch your video and movie library on your big screen in amazing full resolution.</string>
    <string name="intro_desc_phone_5">Watch your video and movie library on your phone anytime anywhere.</string>
    <string name="intro_title_6">Ready</string>
    <string name="intro_desc_6">You\'re all set to go. Thanks for using Amahi.</string>
    <string name="introducing_cast">Introducing Cast</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="android_amahi_anywhere" translatable="false">Android Amahi Anywhere</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="settings">Settings</string>
    <string name="header_settings">Settings</string>
    <string name="songs_in">Song(s) in </string>
    <string name="videos_in">Video(s) in </string>
    <string name="alert_delete_dialog">Delete file</string>
    <string name="alert_delete_confirm">Are you sure?</string>
    <string name="never_opened">Never Opened</string>
    <string name="last_opened">Last Opened</string>
    <string name="title_file_info">File Info</string>
    <string name="text_ok">OK</string>
    <string name="title_selected_server">Server</string>
    <string name="stop_the_audio" translatable="false">"Stop the audio"</string>
    <string name="play_the_audio" translatable="false">"Play the audio"</string>
    <string name="pause_the_audio" translatable="false">"Pause the audio"</string>
    <string name="upload" translatable="false">"Upload"</string>
    <string name="preference_category_about">About</string>
    <string name="preference_category_account">Account</string>
    <string name="preference_category_settings">Settings</string>
    <string name="preference_title_about_feedback">Feedback</string>
    <string name="preference_title_about_rating">Rate</string>
    <string name="preference_title_about_version">Version</string>
    <string name="preference_title_account_sign_out">Sign Out</string>
    <string name="preference_title_server_connection">Connection</string>
    <string name="preference_title_tell_a_friend">Tell a Friend</string>
    <string name="preference_key_about_feedback" translatable="false">application_feedback</string>
    <string name="preference_key_about_rating" translatable="false">application_rating</string>
    <string name="preference_key_about_version" translatable="false">application_version</string>
    <string name="preference_key_account_sign_out" translatable="false">account_sign_out</string>
    <string name="preference_key_server_connection" translatable="false">server_connection</string>
    <string name="preference_key_server_connection_auto" translatable="false">auto</string>
    <string name="preference_key_tell_a_friend" translatable="false">tell_a_friend</string>
    <string name="filter_by">Filter By</string>
    <string name="all_files">All</string>
    <string name="documents_only">Document</string>
    <string name="videos_only">Video</string>
    <string name="photos_only">Photo</string>
    <string name="audio_only">Audio</string>
    <string name="title_file_name">File Name</string>
    <string name="title_file_type">File Type</string>
    <string name="title_file_size">File Size</string>
    <string name="title_last_modified">Last Modified</string>
    <string name="title_last_opened">Last Opened</string>
</resources>