<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014 Amahi
  ~
  ~ This file is part of Amahi.
  ~
  ~ Amahi is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Amahi is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Amahi. If not, see <http ://www.gnu.org/licenses/>.
  -->

<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<android.support.v7.preference.PreferenceCategory android:title="@string/preference_category_account">

		<Preference
			android:key="@string/preference_key_account_sign_out"
			android:title="@string/preference_title_account_sign_out"/>

	</android.support.v7.preference.PreferenceCategory>

	<android.support.v7.preference.PreferenceCategory android:title="@string/preference_category_settings">

		<android.support.v7.preference.ListPreference
			android:key="@string/preference_key_server_connection"
			android:title="@string/preference_title_server_connection"
			android:entries="@array/preference_entries_server_connection"
			android:entryValues="@array/preference_entries_keys_server_connection"
			android:defaultValue="@string/preference_key_server_connection_auto"/>

	</android.support.v7.preference.PreferenceCategory>

	<android.support.v7.preference.PreferenceCategory android:title="@string/preference_category_about">

		<android.support.v7.preference.Preference
			android:key="@string/preference_key_about_version"
			android:title="@string/preference_title_about_version"/>

		<android.support.v7.preference.Preference
			android:key="@string/preference_key_about_feedback"
			android:title="@string/preference_title_about_feedback"/>

		<android.support.v7.preference.Preference
			android:key="@string/preference_key_about_rating"
			android:title="@string/preference_title_about_rating"/>

		<android.support.v7.preference.Preference
			android:key="@string/preference_key_tell_a_friend"
			android:title="@string/preference_title_tell_a_friend"/>

	</android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
