<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014 Amahi
  ~
  ~ This file is part of Amahi.
  ~
  ~ Amahi is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Amahi is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Amahi. If not, see <http ://www.gnu.org/licenses/>.
  -->

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_gravity="center"
	android:paddingLeft="32dp"
	android:paddingRight="32dp"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<ImageView
		android:src="@drawable/ic_banner"
		android:paddingLeft="32dp"
		android:paddingRight="32dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<Space
		android:layout_width="match_parent"
		android:layout_height="8dp"/>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/username_layout"
		android:theme="@style/Theme.AppCompat">

		<android.support.design.widget.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_username"
			android:inputType="text"/>

	</android.support.design.widget.TextInputLayout>

	<Space
		android:layout_width="match_parent"
		android:layout_height="8dp"/>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:id="@+id/password_layout"
        android:theme="@style/Theme.AppCompat"
		app:passwordToggleEnabled="true">

		<android.support.design.widget.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_password"
			android:inputType="textPassword"/>

	</android.support.design.widget.TextInputLayout>


	<Space
		android:layout_width="match_parent"
		android:layout_height="16dp"/>

	<com.dd.processbutton.iml.ActionProcessButton
		android:id="@+id/button_authentication"
		android:text="@string/button_sign_in"
		android:textColor="@android:color/white"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<Space
		android:layout_width="match_parent"
		android:layout_height="16dp"/>

	<ViewAnimator
		android:id="@+id/animator_message"
		android:inAnimation="@anim/slide_down_text"
		android:outAnimation="@anim/slide_up_text"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<Space
			android:id="@+id/view_message_empty"
			android:layout_width="0dp"
			android:layout_height="0dp"/>

		<TextView
			android:id="@+id/text_message_authentication"
			android:text="@string/message_error_authentication"
			android:gravity="center_horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<TextView
			android:id="@+id/text_message_authentication_connection"
			android:text="@string/message_error_authentication_connection"
			android:gravity="center_horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<TextView
			android:id="@+id/text_message_authentication_empty"
			android:text="@string/message_error_authentication_field_empty"
			android:gravity="center_horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

	</ViewAnimator>

</LinearLayout>
