<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/title_file_name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="0dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/last_opened"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/title_file_type"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_file_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="0dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/title_file_size"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_file_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="0dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/title_last_modified"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_file_last_modified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="0dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/title_last_opened"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_file_last_opened"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="0dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>
