<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014 Amahi
  ~
  ~ This file is part of Amahi.
  ~
  ~ Amahi is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Amahi is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Amahi. If not, see <http ://www.gnu.org/licenses/>.
  -->

<ViewAnimator xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/animator"
	android:inAnimation="@android:anim/fade_in"
	android:outAnimation="@android:anim/fade_out"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ProgressBar
		android:id="@android:id/progress"
		android:layout_gravity="center"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

	<FrameLayout
		android:id="@+id/content"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ListView
			android:id="@android:id/list"
			android:scrollbarStyle="outsideOverlay"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent"/>

		<LinearLayout
			android:id="@android:id/empty"
			android:orientation="vertical"
			android:layout_gravity="center"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:text="@string/message_empty_shares"
				android:textSize="@dimen/text_large"
				android:textStyle="bold"
				android:gravity="center_horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

			<Space
				android:layout_width="match_parent"
				android:layout_height="8dp"/>

			<TextView
				android:text="@string/message_notice_create_some"
				android:textSize="@dimen/text_small"
				android:gravity="center_horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

		</LinearLayout>

	</FrameLayout>

	<LinearLayout
		android:id="@+id/error"
		android:orientation="vertical"
		android:layout_gravity="center"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:text="@string/message_error_connection"
			android:textSize="@dimen/text_large"
			android:textStyle="bold"
			android:gravity="center_horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<Space
			android:layout_width="match_parent"
			android:layout_height="8dp"/>

		<TextView
			android:text="@string/message_notice_check_settings"
			android:textSize="@dimen/text_small"
			android:gravity="center_horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

	</LinearLayout>

</ViewAnimator>